# Bridgley

./: .dockerignore  .env.production.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.debug  Dockerfile.prod  Dockerfile.staging  PRODUCTION_DEPLOYMENT.md  README.md  SECURITY_GUIDE.md  UNIVERSAL_ENGINE_GUIDE.md  docker-compose.example.yml  docker-compose.migrate.example.yml  docker-compose.prod.example.yml  docker-compose.staging.yml  pyproject.toml  pytest.ini  requirements.txt
app/: config.py
docs/: DEPLOYMENT_AND_MODULARIZATION_PLAN.md  Dispatch_Layer_Incremental_Implementation_ Plan.md  EPIC_A1_1.md  EPIC_A_PLATFORM.md  EPIC_B_DISPATCH.md  EPIC_C_MOVING_V2.md  EPIC_D_PARSING_PRICING_FIXES.md  EPIC_E_FEATURE_FLAGS_KILL_SWITCHES.md  EPIC_F_ADMIN_CONTROL.md  EPIC_G.md  EPIC_G_6.md  EPIC_INDEX.md  moving_bot_v2.md
examples/: multi_bot_example.py
observability/: cf.yml  minio.yml  observability.yml  observability_full.yml
postman/: README.md  Stage0_Bot.postman_collection.json  Stage0_Bot.postman_collection.json.backup  Stage0_Bot.postman_environment.json
scripts/: backup_db.sh  cf_events.py  convert_cbs_csv.py  create_archive.py  deploy.sh  generate_encryption_key.py  generate_token.py  quick_test.sh  rebuild.sh  run_tests.sh  sign_request.py  update_rule.py
tests/: conftest.py  test_adapters.py  test_credential_schemas.py  test_cross_tenant_isolation.py  test_crypto.py  test_domain.py  test_geocoding.py  test_infrastructure.py  test_job_queue.py  test_localities.py  test_media_assets.py  test_middleware.py  test_moving_bot.py  test_moving_bot_geo.py  (+7 more)
(+115 files in other folders)
