[project]
name = "stage0-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "apscheduler==3.11.2",
    "asyncpg>=0.31.0",
    "black==26.1.0",
    "boto3>=1.42.39",
    "botocore>=1.42.39",
    "cryptography>=44.0.0",
    "fastapi==0.128.0",
    "httpx==0.28.1",
    "mypy==1.19.1",
    "packaging==26.0",
    "pillow==11.0.0",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "python-multipart>=0.0.21",
    "ruff==0.14.13",
    "sentry-sdk==2.50.0",
    "starlette==0.50.0",
    "twilio==9.10.0",
    "uvicorn==0.40.0",
]
